Cleanup & update to pages
+ Removed redundent back up
+ Swaped out the about page image and tabled the skills to save space
+ Added in a temporary contact side

--- a/templates/midaym/less/main.less
+++ b/templates/midaym/less/main.less
@@ -95,14 +95,23 @@ blockquote {
 	blockquote { padding-bottom: @spacer; }
 }
 
-article a {
-	color: @secondaryLinkColor;
-	font-weight: 700;
-	&:hover { color: @white; }
+article {
+	a {
+		color: @secondaryLinkColor;
+		font-weight: 700;
+		&:hover { color: @white; }
+	}
+	tbody {
+	    tr:hover td,
+	    tr:hover th {
+	        .bg(@tableBackgroundAccent);
+	    }
+	}
 }
 
-/* Prettify CSS - its here because I hate not being able to use less vars..... */
+aside ul { .no-bullets(); }
 
+/* Prettify CSS - its here because I hate not being able to use less vars..... */
 code {
 	.border-radius(3px);
 	border: solid @spacer*0.05 lighten(@red,30%);
